trunk/Archive2/90/251e24b67978d5/output
main.cpp:30:9: error: no matching function for call to 'parse_points'
        parse_points(sample, back_inserter(data));
        ^~~~~~~~~~~~
main.cpp:10:20: note: candidate function [with OI = const char *] not viable: no known conversion from 'back_insert_iterator<std::vector<Point, std::allocator<Point> > >' to 'const char *' for 2nd argument
static inline void parse_points(OI out, char const* it, char const* last = std::numeric_limits<char const*>::max()) {
                   ^
main.cpp:31:9: error: no matching function for call to 'parse_points'
        parse_points(sample, back_inserter(data));
        ^~~~~~~~~~~~
main.cpp:10:20: note: candidate function [with OI = const char *] not viable: no known conversion from 'back_insert_iterator<std::vector<Point, std::allocator<Point> > >' to 'const char *' for 2nd argument
static inline void parse_points(OI out, char const* it, char const* last = std::numeric_limits<char const*>::max()) {
                   ^
main.cpp:32:9: error: no matching function for call to 'parse_points'
        parse_points(sample, back_inserter(data));
        ^~~~~~~~~~~~
main.cpp:10:20: note: candidate function [with OI = const char *] not viable: no known conversion from 'back_insert_iterator<std::vector<Point, std::allocator<Point> > >' to 'const char *' for 2nd argument
static inline void parse_points(OI out, char const* it, char const* last = std::numeric_limits<char const*>::max()) {
                   ^
3 errors generated.
